Update the word 'Hello' to 'Goodbye'